--- a/src/index.css
+++ b/src/index.css
@@ -22,15 +22,15 @@ code {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #ffffff; 
+  background: transparent; 
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #cccccc; 
+  background: #bab3ae; 
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #cccccc; 
+  background: #bab3ae; 
 }
